templates/item_detail: add class name and styling to align ref num on sm screens fixes partially #4047 assets/form: rm token input bottom margin on large screens

--- a/meinberlin/assets/scss/_form.scss
+++ b/meinberlin/assets/scss/_form.scss
@@ -148,6 +148,7 @@ div.cke_focus {
 
         input {
             margin-right: $spacer;
+            margin-bottom: 0;
         }
     }
 }
