--- a/meinberlin/assets/scss/components/_item_detail.scss
+++ b/meinberlin/assets/scss/components/_item_detail.scss
@@ -29,6 +29,13 @@
     margin-right: 0.5em;
 }
 
+.item-detail__ref {
+    @media screen and (max-width: $breakpoint-xs-down) {
+        float: left !important; // overwrite the l-bar-right for mobile
+        margin-left: 0 !important;
+    }
+}
+
 .item-detail__content {
     position: relative;
     z-index: 0;
